<resources>
    <string name="app_name">Dm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_otp">Get OTP</string>
    <string name="profile_info">Profile Info</string>
    <string name="finish">Finish</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this Mobile Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_the_otp_send_to">Enter the OTP Send to</string>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="name_of_person">Name of person</string>
    <string name="online">Online</string>
    <string name="type_message">Type Message</string>
    <string name="otp_verification">OTP Verification</string>
</resources>