<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darl_blue"
    android:orientation="vertical"
    tools:context=".presentation.activity.EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:gravity="top" />

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dp"
            android:elevation="20dp"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/name"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/yelloe"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/round_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="true"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/phone"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/yelloe"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black"
            app:startIconDrawable="@drawable/round_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="true"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/about"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/yelloe"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/outline_info_24"
            app:startIconTint="@color/black"> <!-- Set a contrasting color here -->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusable="true"
                android:inputType="text"
                android:maxLines="3"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</RelativeLayout>